--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=hakaton_db;Username=postgres;Password=igor;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:6999"
+      }
+    }
+  }
 }
