--- a/Frontend/Core/Core.csproj
+++ b/Frontend/Core/Core.csproj
@@ -90,5 +90,7 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
-
+	<ItemGroup>
+		<AndroidResource Include="Resources\xml\network_security_config.xml" />
+	</ItemGroup>
 </Project>
