--- a/Frontend/Core/Platforms/Android/AndroidManifest.xml
+++ b/Frontend/Core/Platforms/Android/AndroidManifest.xml
@@ -4,6 +4,7 @@
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 	<application
+		android:usesCleartextTraffic="true"
 		android:networkSecurityConfig="@xml/network_security_config"
 		android:icon="@mipmap/appicon"
 		android:label="MyApp">
