--- a/Frontend/Core/Platforms/Android/AndroidManifest.xml
+++ b/Frontend/Core/Platforms/Android/AndroidManifest.xml
@@ -2,14 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.core">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
-	<application
-		android:networkSecurityConfig="@xml/network_security_config"
-		android:icon="@mipmap/appicon"
-		android:label="MyApp">
-
-		<meta-data
-			android:name="com.google.firebase.messaging.default_notification_icon"
-			android:resource="@mipmap/appicon" />
+	<application android:networkSecurityConfig="@xml/network_security_config" android:icon="@mipmap/appicon" android:label="MyHolicare">
+		<meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/appicon" />
 	</application>
 </manifest>
