--- a/Frontend/Core/Platforms/Android/AndroidManifest.xml
+++ b/Frontend/Core/Platforms/Android/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.core">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	
 	<application android:usesCleartextTraffic="true" android:networkSecurityConfig="@xml/network_security_config" android:icon="@mipmap/appicon" android:label="MyHolicare">
 		<meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/appicon" />
 	</application>
